# rockpaperscissors

./: .gitignore  LICENSE  README.md  _narrow.py  burnside_regular.py  fairness_euler.py  pyproject.toml  run.py  s3317_v2.txt  view.py
.github/workflows/: tests.yml
docs/: equilibrium_endpoints.aux  equilibrium_endpoints.out  equilibrium_endpoints.tex  timing_data_enumeration.tsv  timing_data_polynomial.tsv  two-paradox-counting.md
docs/nauty/: README.md  dreadnaut.txt  nauty-amtog.txt  nauty-converseg.txt  nauty-countg.txt  nauty-directg.txt  nauty-geng.txt  nauty-gentourng.txt  nauty-labelg.txt  nauty-listg.txt  (+1 more)
nauty/: README.md  regular.sh  two_paradox.sh
rpsfair/: __init__.py  cache.py  display.py  equilibrium.py  generate.py  metrics.py  modular.py  plot.py  search.py  structure.py
rust/: CHILD_COUNTING_NOTES.md  INC10_RUNBOOK.md  README.md  balanced.rs  balanced_shim.c  burnside_regular.rs  burnside_tourn.rs  burnside_wide.rs  caterpillar_within.rs  cc_proto.rs  ci_test.sh  cm_extend.rs  cm_filter.rs  common.rs  f3x.rs  factorcrit.rs  inc10.rs  inc10_sigma.sh  inc10_strata.sh  inc10_zrule.rs.bak  inc4.rs  inc_census.sh  inc_count.rs  inc_count_v1.rs.bak  inc_emit.rs  inc_extend.rs  inc_fast.rs  inc_hi.rs  inc_sizer.rs  inc_strata.rs  inc_stratum.rs  inclusive.rs  labsum.rs  prime_filter.rs  qfilter.rs  regular.rs  regular_count.rs  s2_burnside.rs  s2_count.rs  s2_filter.rs  (+12 more)
tests/: test_cache.py  test_display.py  test_equilibrium.py  test_generate.py  test_metrics.py  test_modular.py  test_reductions.py  test_search.py  test_structure.py  toy.py
